--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Needleman-Wunsch algorithm in javascript",
   "main": "src/index.js",
   "scripts": {
-    "test": "nyc ./node_modules/.bin/mocha --recursive --reporter spec --watch",
+    "test": "nyc ./node_modules/.bin/mocha --recursive --reporter spec",
     "start": "node src/index.js"
   },
   "keywords": [
