--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "needleman-js",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Needleman-Wunsch algorithm in javascript",
   "main": "src/index.js",
   "homepage": "https://github.com/juanpablocruz/needleman-wunsch-javascript",
+  "repository": "npm/npm",
   "scripts": {
     "test": "nyc ./node_modules/.bin/mocha --recursive --reporter spec",
     "start": "node src/index.js"
