--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "scripts": {
     "test": "nyc ./node_modules/.bin/mocha --recursive --reporter spec",
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "lint": "./node_modules/.bin/eslint src"
   },
   "keywords": [
     "SIM",
@@ -23,8 +24,12 @@
   "license": "MIT",
   "devDependencies": {
     "chai": "^4.3.4",
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.24.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
     "mocha": "^8.3.2",
     "nyc": "^15.1.0"
-  },
-  "dependencies": {}
+  }
 }
